feature(solver): solver - WFC extends Solver